[package]
name = "hikki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
colored = "2.0.4"
console = "0.15.7"
itertools = "0.12.0"
nom = "7.1.3"
tupletools = "0.3.0"
